sat prod brumb spacing fix

--- a/client/js/saturday_products/saturday_products.scss
+++ b/client/js/saturday_products/saturday_products.scss
@@ -216,6 +216,13 @@
 
     .sat_link {
         margin-top: -55px;
+        display: inline-block;
+        vertical-align: top;
+        padding: 1.7vw 0 0 3.3vw;
+    }
+    
+    .product-listing {
+        margin-top: 1.5vh;
     }
 
 /*    .sat-prod-text {
